# cineplex-watcher

./: LICENSE  config.py  email.py  pyproject.toml  site-scraper.py
lib/: send_email.py
