[tool.poetry]
name = "movie-ticket-watcher"
version = "0.1.0"
description = "A script to send yourself an email once tickets are available for a given movie at Cineplex"
authors = ["Bryan Niwa <thebryanniwa@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.ruff.lint]
select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
